# zero2prod

./: Cargo.toml  configuration.yaml
.github/workflows/: general.yml
scripts/mac/: init_db.sh
scripts/windows/: init_db.bat
src/: configuration.rs  lib.rs  main.rs  startup.rs
src/routes/: subscription.rs
tests/: health_check.rs
