[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"
authors = ["Rafli Putra"]

[lib]
path = "src/lib.rs"

[dependencies]
actix-web = "4.9.0"
tokio = {version = "1.41.1", features = ["macros", "rt-multi-thread"]}
serde = {version = "1.0.215", features = ["derive"]}
config = "0.14.1"
uuid = {version = "1.11.0", features = ["v4"]}
chrono = "0.4.38"

[dependencies.sqlx]
version = "0.8.2"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]

[dev-dependencies]
reqwest = "0.12.9"